--- a/styles.css
+++ b/styles.css
@@ -102,3 +102,33 @@ nav .nav-right .hamburger-icon{
     border-radius: 50%;
     background-color: black;
 }
+
+/* ABOUT ME */
+
+.about-container {
+    width: 345px;    
+    height: 217px;
+    border-radius: 8px;
+    border: .5px solid lightgray;
+    padding: 1em;
+    margin: 0 auto;
+    box-shadow: 0 0.125rem 0.25rem rgba(0, 0, 0, 0.075);
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start ;
+    justify-content: center;
+    background-color: #f5f1f1;
+}
+
+.about-container .about-btn{
+    
+}
+
+.about-container p {
+    line-height: 1.5em;
+    font-size: .9em;
+    font-weight: 400;
+}
+
+/* MY WORKS */
+/* CONTACT ME */
